# cargo_local

./: .gitignore  Cargo.toml  README.md
.github/workflows/: cd.yml
src/: command.rs  main.rs
