[package]
name = "cargo_local"
version = "0.1.0"
edition = "2021"
description = "cargo local tools"
authors = ["quyc <quycsff@gmail.com>"]
repository = "https://github.com/quyc07/cargo_local"
license = "MIT OR Apache-2.0"

[dependencies]
walkdir = "2"
clap = { version = "4", features = ["cargo", "derive", "string"] }
anyhow = "1.0.97"
regex = "1.11.1"