[package]
name = "cargo_local_tools"
version = "0.1.1"
edition = "2021"
description = "cargo local tools"
authors = ["quyc <quycsff@gmail.com>"]
repository = "https://github.com/quyc07/cargo_local"
license = "MIT OR Apache-2.0"

[dependencies]
walkdir = "2"
clap = { version = "4", features = ["cargo", "derive", "string"] }
anyhow = "1.0.97"
regex = "1.11.1"
dirs-next = "2.0.0"
